Use kojan-xml for xmvn-resolve CLI
Make use of the Kojan XML library for deserialization of resolution
requests and serialization of resolution results in XMvn Resolver CLI.